log
Sun 24 Mar 2024 03:56:15 PM UTC: 
 tests:  0|6
total_score: 0/70
6b3f5c0
Sun 24 Mar 2024 04:16:41 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
648e16a
Sun 24 Mar 2024 05:31:56 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
272b4be
Sun 24 Mar 2024 05:33:14 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
f36057b
Sun 24 Mar 2024 05:33:54 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
62c1fca
Sun 24 Mar 2024 05:35:17 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
71bb1af
Sun 24 Mar 2024 05:36:11 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:46:10: error: ‘lista’ undeclared (first use in this function); did you mean ‘list’?
   46 |   return lista->current;
      |          ^~~~~
      |          list
list.c:46:10: note: each undeclared identifier is reported only once for each function it appears in
list.c:47:1: error: control reaches end of non-void function [-Werror=return-type]
   47 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
8e4054e
